--- a/src/homePage/style.css
+++ b/src/homePage/style.css
@@ -30,7 +30,7 @@
     
 }
 .search_section{
-    margin-top:30px;
+    margin-top:38px;
 }
 .main_header{
     color:#293340;
@@ -55,15 +55,15 @@
 }
 .search_icon{
     margin-left: -21rem;
-    margin-top: 11px;
-    width: 24px;
+    margin-top: 12px;
+    width: 25px;
     height: 27px;   
 }
 .features_section{
     display:flex;
     justify-content:space-around;
     flex-flow:nowrap;
-    margin-top:30px;
+    margin-top:38px;
 }
 .icon{
     width:20px;
@@ -113,4 +113,34 @@
 }
 .text{
     margin-top:9px;
+    color:#293340;
+    font-size: 14px;
+    font-weight:500;
+}
+.question_section{
+    display:flex;
+    background: #FFE6D1;
+    width:323px;
+    border-radius: 6px;
+    margin-top: 38px;
+    margin-left: 31px;
+    height: 33px;
+}
+.question_background{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-left:29px;
+}
+.para_question{
+    color: #F75D34;
+    font-size: 12px; 
+    padding-left: 0px;
+}
+.lock{
+    margin-right: 5px;
+    width:12.48px;
+}
+span{
+    font-weight:bold;
 }
