--- a/src/screen/search/style.css
+++ b/src/screen/search/style.css
@@ -26,7 +26,7 @@ input{
     padding-bottom: 9px;
     font-family: 'Fira Sans', sans-serif;
 }
-span{
+.search_span{
     margin-left: -45px;
     color:#00973F;
     font-family: 'Fira Sans', sans-serif;
