--- a/src/screen/representatives/style.css
+++ b/src/screen/representatives/style.css
@@ -76,7 +76,7 @@
     color:#293340;
     margin-left:5px;
 }
-.representative_details{
+.representative_main{
     margin-top:10px;
     padding-bottom:100px;
 }
@@ -145,20 +145,21 @@
     font-size:12px;
     margin-left: 8px;
 }
-footer{
+.representative_footer{
     display: flex;
     position:fixed;
     bottom:0;
     background:white;
     justify-content:space-around;
     width:375px;
+    padding-top:5px;
     box-shadow: 0px 0px 6px rgba(71, 77, 96, 0.2);
 }
 .footer_content{
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 10px;
+    padding-bottom: 3px;
 }
 .rep_footer_header{
     font-family: 'Fira Sans', sans-serif;
