--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,8 @@
 @import "./scss/reset";
 
-body{
-    width:375px;
-    background:white;
-    overflow-x:hidden;
-    font-family: 'Fira Sans', sans-serif;
+body {
+    width: 375px;
+    background: white;
+    overflow-x: hidden;
+    font-family: "Fira Sans", sans-serif;
 }
