refactored header and hero_section

--- a/src/screen/representative_details/style.css
+++ b/src/screen/representative_details/style.css
@@ -1,7 +1,7 @@
-header{
+/* header{
     width:375px;
     background: linear-gradient(317.15deg, #90DF6F 13.65%, #00973F 88.4%);
-}
+} */
 .arrow_icon{
     margin-left: 324px;
 }
