--- a/src/screen/homePage/style.css
+++ b/src/screen/homePage/style.css
@@ -1,381 +1,461 @@
-*{
-    box-sizing: border-box;
-    margin:0;
-    padding:0;
+.HomePageHeader {
+  background: #fff;
+  height: 6.188rem;
+  width: 100%;
 }
-.clipPath{
-    position:absolute;
-    top:0;
-    left:15rem;
+.clipPath {
+  display: flex;
+  justify-content: end;
 }
-.logo{
-    width:204px;
-    height:40px;
+/* .homepage {
+  height: 100vh;
+  width: 382px;
+} */
+.LogoNav {
+  display: flex;
+  margin-top: 0.5rem;
+  justify-content: space-between;
+  align-items: center;
 }
-.header{
+.LogoNav img {
+  width: 13rem;
+}
+.mainContainer {
+  padding: 0 1rem;
+}
+/* .logo {
+  width: 204px;
+  height: 40px;
+} */
+
+.Nav--items {
+  position: absolute;
+  visibility: hidden;
+  background: green;
+  z-index: 0;
+}
+.Nav--items.show {
+  visibility: visible;
+}
+
+.nav-list {
+  display: flex;
+  flex-direction: column;
+}
+.nav-listItems {
+  margin-bottom: 1rem;
+}
+
+/* .HomeNavLinks{
+    width:100%;
+    height:65px;
+    background:yellow;
+}
+.HomeNavLinks ul{
+    display:flex;
+    margin:20px 0px;
+    padding:0px 25px;
+}
+.HomeNavLinks li{
+    list-style-type: none;
+    padding-right:10px;
+} */
+*/
+/* .header{
    margin-top:73px;
    display:flex;
    justify-content: space-between;
    padding: 0 12px;
-}
-.hamburger{
+} */
+/* .hamburger{
     color:#474D60;
+} */
+/* .sasmson {
+  height: 53vh;
+  background: green;
+} */
+.heroSection {
+  background: green;
+  height: 40vh;
 }
-.main_page{
-    margin-top:48px;
-    margin-left:13px;
-    display: flex;
-    flex-direction: column;
-    justify-content:space-between;
-    
+.hero__header {
+  max-width: 20rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  color: #293340;
+  font-size: 1.6rem;
+  font-family: sans-serif;
+  font-weight: 600;
 }
-.home_search_section{
-    margin-top:38px;
-}
-.main_header{
-    color:#293340;
-    font-size:27px;
-    width:292px;
-    font-weight:bold;
-    font-family:"fira-sans",sans-serif;
-    line-height: 32px;
-}
-.home_input_address{
-    width:349px;
-    padding: 10px;
-    background:white;
-    border: 2px solid #00973F;
-    border-radius: 24px;
-    box-shadow: 0px 8px 16px rgba(66, 110, 217, 0.2);
-    font-size: 14px;
-    padding-left: 47px;
-    font-family:"fira-sans",sans-serif;
-    color:#293340;
-    line-height:16.8px;
-    font-weight:500;
-}
-.search_input{
-    margin-top:32px;
-    display:flex;
-    flex-direction:row;
-}
-.home_search_icon{
-    margin-left: -21rem;
-    margin-top: 12px;
-    width: 25px;
-    height: 27px;   
-}
-.home_form{
-    display:flex;
-    align-items:center;
-}
-.features_section{
-    display:flex;
-    justify-content:space-around;
-    flex-flow:nowrap;
-    margin-top:38px;
-}
-.home_span{
-    color:#F75D34;
-    font-family: 'Fira Sans', sans-serif;
-    font-weight:400;
-}
-.icon{
-    width:20px;
-}
-.icon_style{
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-}
-.icon_background{
-    width:63px;
-    height:63px;
-    border-radius:18px;
-    background:linear-gradient(142.37deg, #26C8A8 4.58%, #62C76D 94.61%);
-    box-shadow: 0px 16px 20px rgba(66, 200, 141, 0.3);
-}
-.petition{
-    background: linear-gradient(318.38deg, #FF895F 9.38%, #FFD438 96%);
-    box-shadow: 0px 16px 20px rgba(255, 165, 80, 0.3);
-}
-.icons{
-    width:34.42px;
-    margin-top: 9px;
-    margin-left: 12px;
-}
-.petitions{
-    width: 38.42px;
-    margin-top: 11px;
-    margin-left: 14px;
-}
-.feedback{
-    background: linear-gradient(313.84deg, #249CD5 13.33%, #24D5C3 85.15%);
-    box-shadow: 0px 16px 20px rgba(36, 166, 210, 0.3);
-}
-.feedbacks{
-    width: 35px;
-    margin-top: 13px;
-    margin-left: 13.2px;
-}
-.report{
-    background: linear-gradient(137.15deg, #FF825F 11.6%, #FF4C51 86.35%);
-    box-shadow: 0px 16px 20px rgba(255, 103, 88, 0.3);
-}
-.reports{
-    margin-top:11px;
-    margin-left: 14px;
-}
-.text{
-    margin-top:9px;
-    color:#293340;
-    font-size: 14px;
-    font-weight:500;
-}
-.home_question_section{
-    display:flex;
-    background: #FFE6D1;
-    width:323px;
-    border-radius: 6px;
-    margin-top: 38px;
-    margin-left: 31px;
-    height: 33px;
-    margin-left: 28px;
-}
-.home_question_background{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-left:14px;
-}
-.home_para_question{
-    color: #F75D34;
-    font-size: 12px; 
-    padding-left: 4px;
-    font-family:"Roboto", sans-serif;
-    font-weight:200;
-    font-family: 'Fira Sans', sans-serif;
-}
-.lock{
-    margin-right: 10px;
-    width:12.48px;
+/* .home_search_section {
+  margin-top: 38px;
+} */
+.hero_header {
+  max-width: 10rem;
+  color: #293340;
+  font-size: 27px;
+  font-weight: bold;
+  font-family: 'fira-sans', sans-serif;
+  line-height: 32px;
 }
 
-.senator_images{
-    width:150px;   
+.hero__search {
+  position: relative;
 }
-.card{
-    height: 186px;
-    background: #FFFFFF;
-    box-shadow: 0px 3px 6px rgba(71, 77, 96, 0.1);
-    width: 150px;
-    border-radius: 6px;
-    margin-right:4px;
+.hero__search input {
+  width: 100%;
+  height: 7vh;
+  border: 2px solid #00973f;
+  border-radius: 24px;
+  box-shadow: 0px 8px 16px rgb(66 110 217 / 20%);
+  font-size: 15px;
+  padding-left: 38px;
+  font-family: 'fira-sans', sans-serif;
+  font-weight: 600;
+  outline: none;
+  color: #293340;
 }
-.container{
-    text-align: left;
-    padding-left:13px;
+.hero__search img {
+  width: 2rem;
+  position: absolute;
+  bottom: 2px;
+  left: 7px;
 }
-.reps_position{
-    font-size: 8px;
-    color: #D9A01B;
-    font-family: 'Fira Sans', sans-serif;
-    margin-top: 5px;
-    font-weight:500;
-}
-.reps_name{
-    font-family:'Fira Sans', sans-serif;
-    font-size:14px;
-    font-weight:500;
-    color:#000000;
-    margin-top:6px;
-    margin-bottom:7px;
-}
-.reps_constituency{
-    font-family:'Fira Sans', sans-serif;
-    font-weight:200;
-    font-size:12px;
-    line-height:14px;
-    color: #474D60;
-    margin-bottom:6px;
-}
-.rating_number{
-    font-family:'Fira Sans', sans-serif;
-    color:#1EA896;
-    font-size:14px;
-    font-weight:500;
-    margin-right:auto;
-}
-.reviews{
-    font-family: 'Fira Sans', sans-serif;
-    font-size:12px;
-    line-height:14px;
-    color: #474D60;
-    font-weight:400;
-    font-style: italic;
-}
-.rating{
-    display:flex;
-    width:104px;
-}
-.rating_button{
-    width:14px;
-    height:14px;
-    border:1px solid #1EA896;
-    border-radius:50%;
-    margin-right:auto;
-}
-.filled_background{
-    margin:0 auto;
-    margin-bottom: 3px;
-    margin-left: 2px;
-}
-.main_slider{
-     margin-top:40px;
+.hero__features {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 2rem;
+  padding-bottom: 1.3rem;
 }
 
-.content_style{
-    height: '160px';
-    color: '#fff';
-    line-height: '160px';
-    text-align: 'center';
-    background: '#364d79';
+.petition__background {
+  background: linear-gradient(318.38deg, #ff895f 9.38%, #ffd438 96%);
+  box-shadow: 0px 16px 20px rgba(255, 165, 80, 0.3);
 }
-.reps_header{
-    margin-top: 24px;
-    margin-bottom: 24px;
-    font-family:'Fira Sans', sans-serif;
-    font-size:13px;
-    color:#293340;
-    letter-spacing: 0.7px;
-    line-height: 16px;
-    font-weight: bold;
+/* .home_form {
+  display: flex;
+  align-items: center;
+} */
+
+/* flex-flow: nowrap; */
+/* margin-top: 38px; */
+
+.home_span {
+  font-weight: 400;
 }
-.reps{
-    margin-left: 20px;
-    margin-top: 24px;
+.icon {
+  width: 20px;
+}
+/* .icon_style {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} */
+.hero__feature--wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 18px;
+}
+.reps__background {
+  background: linear-gradient(142.37deg, #26c8a8 4.58%, #62c76d 94.61%);
+  box-shadow: 0px 16px 20px rgba(66, 200, 141, 0.3);
 }
 
-.reps_section{
-    display:flex;
-    overflow-y:scroll;  
+.hero__feature__background img {
+  width: 2.4rem;
+  height: 2.7rem;
+  /* 
+   */
 }
-.icon_section{
-    width:375px;
-    background:white;
-    box-shadow: 0px 3px 6px rgba(71, 77, 96, 0.1);
+.feature__petition__icon {
+  margin-left: 5px;
 }
-.icons_link{
-    display:flex;
-    margin-top:24px;
-    justify-content: space-around;
+.hero__petition__icon {
+  /* width: 38.42px;
+  margin-top: 11px;
+  margin-left: 14px; */
 }
-.icon_group{
-    display:flex;
-    flex-direction: column;
-    align-items:center;
+* .feedback__background {
+  background: linear-gradient(313.84deg, #249cd5 13.33%, #24d5c3 85.15%);
+  box-shadow: 0px 16px 20px rgba(36, 166, 210, 0.3);
 }
-.icon_text{
-    font-family: 'Fira Sans', sans-serif;
-    color: #293340;
-    font-size:12px;
-    line-height: 14px;
-    margin-top:8px;
+/* .feedbacks {
+  width: 35px;
+  margin-top: 13px;
+  margin-left: 13.2px;
+} */
+.report__background {
+  background: linear-gradient(137.15deg, #ff825f 11.6%, #ff4c51 86.35%);
+  box-shadow: 0px 16px 20px rgba(255, 103, 88, 0.3);
 }
-.view_all{
-    display:flex;
-    align-items: center;
-    margin-bottom:20px;
+/* .reports {
+  margin-top: 11px;
+  margin-left: 14px;
+} */
+.text {
+  text-align: center;
+  margin-top: 9px;
+  color: #293340;
+  font-size: 14px;
+  font-weight: 500;
 }
-.colored_arrow{
-    width:18.56px;
+.hero_quiz {
+  background: #ffe6d175;
+  margin: 0 auto;
+  width: 92%;
+  border-radius: 6px;
+  height: 5vh;
 }
-.home_footer_number{
-    font-family:'Fira Sans', sans-serif;
-    font-weight:400;
+.hero_quiz div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+  color: #f75d34;
+  padding-top: 0.5rem;
+  font-family: sans-serif;
 }
-.colored_header{
-    color:#00973F;
-    font-family:'Fira Sans', sans-serif;
-    font-weight:500;
-    font-size:14px;
-    line-height:25px;
-    width:283px;
-    margin-left:10px;
+.hero_quiz img {
+  width: 1rem;
+  margin-right: 0.4rem;
 }
-.home_footer_section{
-    width:375px;
-    height:496px;
-    background: linear-gradient(270deg, #90DF6F 0%, #00BBCA 100%);
+.hero_quiz span {
+  font-weight: 600;
 }
-.footer{
-    color:white;
-    padding-top:3px;
-    font-size:12px;
-    letter-spacing: 0.646154px;
-    font-weight: bold;
-    width:320px;
+/* .home_question_background {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 14px;
+} */
+/* .home_para_question {
+  color: #f75d34;
+  font-size: 12px;
+  padding-left: 4px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 200;
+  font-family: 'Fira Sans', sans-serif;
+} */
+/* .lock {
+  margin-right: 10px;
+  width: 12.48px;
+} */
+
+.senator_images {
+  width: 150px;
 }
-.footer_white_bg{
-    height:111.53px;
-    background:white;
-    width:335px;
-    border-radius:6px;
-    margin-bottom: 7px;
+.card {
+  height: 186px;
+  background: #ffffff;
+  box-shadow: 0px 3px 6px rgba(71, 77, 96, 0.1);
+  width: 150px;
+  border-radius: 6px;
+  margin-right: 4px;
 }
-.home_footer_content{
-    display:flex;
-    flex-direction:column;
-    margin-left: 20px;
-    padding-top:17px;
+.container {
+  text-align: left;
+  padding-left: 13px;
 }
-.footer_content_header{
-    font-family: 'Fira Sans', sans-serif;
-    width:257px;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 17px;
+.reps_position {
+  font-size: 8px;
+  color: #d9a01b;
+  font-family: 'Fira Sans', sans-serif;
+  margin-top: 5px;
+  font-weight: 500;
 }
-.inner_footer_content{
-    display:flex;
-    align-items:center;
-    margin-top: 13px;
+.reps_name {
+  font-family: 'Fira Sans', sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  color: #000000;
+  margin-top: 6px;
+  margin-bottom: 7px;
 }
-.inner_footer_content_header{
-    color: #00973F;
-    font-size:20px;
-    line-height: 16px;
+.reps_constituency {
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 200;
+  font-size: 12px;
+  line-height: 14px;
+  color: #474d60;
+  margin-bottom: 6px;
 }
-.inner_footer_content_para1{
-    font-family: 'Fira Sans', sans-serif;
-    font-size:12px;
-    color:#474D60;
-    font-weight:200;
-    margin-left:4px;
+.rating_number {
+  font-family: 'Fira Sans', sans-serif;
+  color: #1ea896;
+  font-size: 14px;
+  font-weight: 500;
+  margin-right: auto;
 }
-.home_footer_rating{
-    display:flex;
+.reviews {
+  font-family: 'Fira Sans', sans-serif;
+  font-size: 12px;
+  line-height: 14px;
+  color: #474d60;
+  font-weight: 400;
+  font-style: italic;
+}
+.rating {
+  display: flex;
+  width: 104px;
+}
+.rating_button {
+  width: 14px;
+  height: 14px;
+  border: 1px solid #1ea896;
+  border-radius: 50%;
+  margin-right: auto;
+}
+.filled_background {
+  margin: 0 auto;
+  margin-bottom: 3px;
+  margin-left: 2px;
+}
+.main_slider {
+  margin-top: 40px;
 }
 
-.inner_footer_content_para2{ 
-    font-family: 'Fira Sans', sans-serif;
-    font-size:12px;
-    color:#474D60;
-    font-weight:300;
-    margin-left: auto;
-    margin-right: 15px;
+.content_style {
+  height: '160px';
+  color: '#fff';
+  line-height: '160px';
+  text-align: 'center';
+  background: '#364d79';
 }
-.footer_footer{
-    display:flex;
-    flex-direction:column;
+.reps_header {
+  margin-top: 24px;
+  margin-bottom: 24px;
+  font-family: 'Fira Sans', sans-serif;
+  font-size: 13px;
+  color: #293340;
+  letter-spacing: 0.7px;
+  line-height: 16px;
+  font-weight: bold;
 }
-.footer_header{
-    color:white;
+.reps {
+  /* margin-left: 20px;
+  margin-top: 24px; */
 }
-.home_white{
-    margin-top:10px;
-    margin-left:3px;
-}
-.progress_bar{
 
+.reps_section {
+  display: flex;
+  overflow-y: scroll;
+}
+.icon_section {
+  width: 375px;
+  background: white;
+  box-shadow: 0px 3px 6px rgba(71, 77, 96, 0.1);
+}
+.icons_link {
+  display: flex;
+  margin-top: 24px;
+  justify-content: space-around;
+}
+.icon_group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.icon_text {
+  font-family: 'Fira Sans', sans-serif;
+  color: #293340;
+  font-size: 12px;
+  line-height: 14px;
+  margin-top: 8px;
+}
+.view_all {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.colored_arrow {
+  width: 18.56px;
+}
+.home_footer_number {
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 400;
+}
+.colored_header {
+  color: #00973f;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 25px;
+  width: 283px;
+  margin-left: 10px;
+}
+.home_footer_section {
+  width: 375px;
+  height: 496px;
+  background: linear-gradient(270deg, #90df6f 0%, #00bbca 100%);
+}
+.footer {
+  color: white;
+  padding-top: 3px;
+  font-size: 12px;
+  letter-spacing: 0.646154px;
+  font-weight: bold;
+  width: 320px;
+}
+.footer_white_bg {
+  height: 111.53px;
+  background: white;
+  width: 335px;
+  border-radius: 6px;
+  margin-bottom: 7px;
+}
+.home_footer_content {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+  padding-top: 17px;
+}
+.footer_content_header {
+  font-family: 'Fira Sans', sans-serif;
+  width: 257px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+}
+.inner_footer_content {
+  display: flex;
+  align-items: center;
+  margin-top: 13px;
+}
+.inner_footer_content_header {
+  color: #00973f;
+  font-size: 20px;
+  line-height: 16px;
+}
+.inner_footer_content_para1 {
+  font-family: 'Fira Sans', sans-serif;
+  font-size: 12px;
+  color: #474d60;
+  font-weight: 200;
+  margin-left: 4px;
+}
+.home_footer_rating {
+  display: flex;
+}
+
+.inner_footer_content_para2 {
+  font-family: 'Fira Sans', sans-serif;
+  font-size: 12px;
+  color: #474d60;
+  font-weight: 300;
+  margin-left: auto;
+  margin-right: 15px;
+}
+.footer_footer {
+  display: flex;
+  flex-direction: column;
+}
+.footer_header {
+  color: white;
+}
+.home_white {
+  margin-top: 10px;
+  margin-left: 3px;
 }
